--- a/Nodejs-master/src/resources/views/user/team.hbs
+++ b/Nodejs-master/src/resources/views/user/team.hbs
@@ -86,7 +86,7 @@
           <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
           </label>
-          <label class="logo">ScheduleX</label>
+          <label class="logo">Work Management</label>
         <ul>
           <li><a class="active" id="search2" href="/user/search" ><img class="search2" src="/img/search2.png" /></a></li>
           <li><a class="active" href="/user/info">Profile</a></li>
